tests/negative/iter-read.damn
[ Cannot READ value into For-Loop iterator ]
BEGIN
    FOR i FROM 0 TO 10 DO
        READ i;
    ENDFOR
END
